--- a/config.tex
+++ b/config.tex
@@ -1139,6 +1139,8 @@
 
 % EN: Provide tables over multiple pages
 \usepackage{longtable}
+\usepackage{tikz}
+\usepackage{adjustbox}
 
 
 % EN: Show LaTeX commands and their results in the document
