--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 %\RequirePackage{kvoptions-patch}
 \documentclass[a4paper, twoside, bibliography=totoc, headsepline, cleardoublepage=empty, parskip=half, draft=false]{scrbook}
 
+
 \let\ifdeutsch\iffalse
 \let\ifenglish\iftrue
 
@@ -33,7 +34,7 @@
 
 \input{commands}
 
-\pagenumbering{arabic}
+
 \Coverpage
 \Copyright
 %Eigener Seitenstil fuer die Kurzfassung und das Inhaltsverzeichnis
@@ -42,7 +43,7 @@
 \pagestyle{preamble}
 \renewcommand*{\chapterpagestyle}{preamble}
 
-
+\pagestyle{empty}
 
 %Kurzfassung / abstract
 %auch im Stil vom Inhaltsverzeichnis
@@ -94,6 +95,7 @@
 %\renewcommand{\@pnumwidth}{2em}
 %\makeatother
 %
+\pagenumbering{roman}
 \tableofcontents
 
 % Bei einem ungünstigen Seitenumbruch im Inhaltsverzeichnis, kann dieser mit
@@ -101,7 +103,10 @@
 % an der passenden Stelle im Fließtext erzwungen werden.
 
 \listoffigures
+\cleardoublepage
+
 \listoftables
+\cleardoublepage
 
 % Control List of Listings
 \let\iflistings\iffalse
@@ -155,7 +160,7 @@
 \ofoot[\usekomafont{pagenumber}\thepage]{\usekomafont{pagenumber}\thepage}
 \ifoot[]{}
 
-
+\pagenumbering{arabic}
 %% vv  scroll down for content  vv %%
 \input{content.tex}
 
